--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,9 +4,10 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="icon" href="../images/favicon/favicon.png" type="image/png">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>fileshare</title>
   </head>
   <body>
     <div class="main-container">
